fixed spacing of the WKOF fieldet legend

--- a/src/stylesheets/helpers/_colors.scss
+++ b/src/stylesheets/helpers/_colors.scss
@@ -100,6 +100,7 @@ $popover-background-color: $iron-grey;
 $popover-border-color:     $iron-grey;
 $popover-progress-color:   $plasma-blue;
 $popover-shadow:           $shadow;
+$popover-text-color:       $text-color;
 
 // list
 $list-background-color: $shade-black;
