--- a/src/stylesheets/userscripts/_wanikani_open_framework.scss
+++ b/src/stylesheets/userscripts/_wanikani_open_framework.scss
@@ -14,7 +14,7 @@
 
                 border-bottom: 1px solid $shade-black !important;
                 border-radius: 0;
-                color: $text-color !important;
+                color: $popover-text-color !important;
             }
 
             &-buttonpane {
@@ -25,16 +25,21 @@
             }
 
             &-content {
-                fieldset {
+                fieldset.wkof_group {
                     @extend %borderless;
                     @extend %no-background-color;
 
-                    legend {
-                        color: $text-color;
+                    legend:nth-child(1) {
+                        color: $popover-text-color;
                         float: left;
+                        margin-bottom: 10px;
+
+                        + * {
+                            clear: both;
+                        }
                     }
 
-                    + fieldset {
+                    + fieldset.wkof_group {
                         border-radius: 0;
                         border-top: 1px solid $shade-black !important;
                     }
@@ -52,6 +57,7 @@
         &-tabs {
             &-nav {
                 border-bottom: 1px solid $shade-black !important;
+                margin-bottom: 0 !important;
             }
 
             &-tab {
